--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+/*
+  3. Allow percentage-based heights in the application
+*/
+html,
+body {
+  min-height: 100% !important;
+}
+
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +33,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button{
+  border: none;
+  background: transparent;
+
+}
+
+p{
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 35px;
 }
